# spectra2

./: AUTHORS  Doxyfile  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
doc/: bee.txt  thesis.aux  thesis.bbl  thesis.bib  thesis.blg  thesis.brf  thesis.dvi  thesis.lof  thesis.out  thesis.tex  thesis.toc  unibo.cls
doc/chapters/: 00_introduzione.tex  01_dsp.tex  02_progettazione.tex  03_sviluppo.tex  04_risultati.tex  05_conclusioni.tex  99_appendix.tex
doc/images/: 5_256_20.eps  5_4096_1221.eps  5_4194304_12.eps  5_512_1.eps  5_512_97656.eps  Atmospheric_electromagnetic_opacity.eps  algorithm.eps  antenne.eps  output.eps  sviluppo.eps  threading.eps
doc/images/src/: output.dia  sviluppo.dia
doc/presentation/: presentation.tex
doc/presentation/var/: plot_wave.py
extra/: plot.py  plot_save.py  udp.py
m4/: ax_boost_threadpool.m4  ipp.m4
src/: Makefile.am  data_length.hpp  debug.cc  debug.hpp  endian_fix.h  fft.cc  fft.hpp  fft_buf.hpp  file.cc  file.hpp  ipp.cc  ipp.hpp  list.hpp  main.cc  noout.cc  output.cc  output.hpp  server.cc  server.hpp  type.hpp
src/filter/: chain.cc  chain.hpp  merge.hpp  process.hpp  sink.hpp  source.hpp
src/ipp/: AddMerger.cc  AddMerger.hpp
test/: Makefile.am  Makefile.in  common.cc  common.h  copy.cc  fft.cc  fft.h  fft_noth.cc  fft_th.cc  fftinv.cc  siggen.cc  subject.cc  time.cc
test/python/: generate_signal.py  plot_signal.py
