bin_PROGRAMS = fft siggen fftinv time multi

fft_SOURCES = fft.cc
fft_CPPFLAGS=$(IPP_INCLUDES) $(BOOST_CPPFLAGS)
fft_LDFLAGS=$(IPP_LDFLAGS) $(BOOST_LDFLAGS)
fft_LDADD = $(IPP_LIBS) $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_FILESYSTEM_LIB) $(BOOST_SYSTEM_LIB)

fftinv_SOURCES = fftinv.cc
fftinv_CPPFLAGS=$(IPP_INCLUDES) $(BOOST_CPPFLAGS)
fftinv_LDFLAGS=$(IPP_LDFLAGS) $(BOOST_LDFLAGS)
fftinv_LDADD = $(IPP_LIBS)

siggen_SOURCES = siggen.cc
siggen_CPPFLAGS=$(IPP_INCLUDES) $(BOOST_CPPFLAGS)
siggen_LDFLAGS=$(IPP_LDFLAGS) $(BOOST_LDFLAGS)
siggen_LDADD = $(IPP_LIBS) $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_FILESYSTEM_LIB) $(BOOST_SYSTEM_LIB)

time_SOURCES = time.cc fft_noth.cc common.cc
time_CPPFLAGS=$(IPP_INCLUDES) $(BOOST_CPPFLAGS)
time_LDFLAGS=$(IPP_LDFLAGS) $(BOOST_LDFLAGS)
time_LDADD = $(IPP_LIBS) $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_FILESYSTEM_LIB) $(BOOST_SYSTEM_LIB)

multi_SOURCES = time.cc fft_th.cc common.cc
multi_CPPFLAGS=$(IPP_INCLUDES) $(BOOST_CPPFLAGS)
multi_LDFLAGS=$(IPP_LDFLAGS) $(BOOST_LDFLAGS)
multi_LDADD = $(IPP_LIBS) $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_FILESYSTEM_LIB) $(BOOST_SYSTEM_LIB) $(BOOST_THREAD_LIB)
